tests/snapshots/run_wpt_conformance__onnx_concat_three_float16_4D_tensors_of_same_shape_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat three float16 4D tensors of same shape along axis 1",
    "onnx",
    "PASS",
)
